2007-08-11  Inge Wallin  <inge@lysator.liu.se>

	Added getter for symmetry.
	* src/lib/AbstractLayer/AbstractLayerInterface.cpp (visible): new
	method.

2007-08-11  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleWidget.{cpp,h}:
        - Some fixes concerning Carlos' introduction of
        projections
        - make all methods accept Degree as a unit by 
          default ( geoCoordinates RAD->DEG )
    * src/lib/MarbleWidgetInputHandler.cpp:
    * src/lib/MarbleWidgetPopupMenu.{cpp,h}:
        - make all methods accept Degree as a unit by 
          default ( geoCoordinates RAD->DEG )
    * src/lib/Quaternion.cpp:
        - remove DEG2ONE.
        - fix an inaccuracy due to usage of int instead of double
    * src/lib/global.h:
        - remove DEG2ONE.
    * CODING:
        - adding a notion on upper/lower case conventions for 
          variable / method names.

2007-08-11  Torsten Rahn  <rahn@kde.org>
	
    * src/lib/MarbleWidget.{h,cpp} : Introducing RAD2DEG and fixing
      rotate(phi,theta,psi) as well as other methods. 

    * src/lib/BoundingBox.{h,cpp} : some minor coding style fixes.

    * src/lib/global.h : RAD2DEG, DEG2RAD, DEG2ONE, RAD2ONE		

    Adjustments to the usage of RAD2DEG, etc.:		
    * src/lib/vectormap.cpp
    * src/lib/GeoPoint.h
    * src/lib/kml/KMLPointParser.cpp
    * src/lib/global.h
    * src/lib/MarbleWidget.h
    * src/lib/MarbleControlBox.cpp
    * src/lib/xmlhandler.cpp
    * src/lib/GridMap.cpp
    * src/lib/GeoPoint.cpp
    * src/lib/MarbleWidgetInputHandler.cpp
    * src/qtmain.cpp

2007-08-10  Andrew Manson   <g.real.ate@gmail.com>

    Added a method to extract the global Quaternion from the Widget
    for the use in Bounding Box. Code was just Coppied from 
    MarbleWidget::geoCoordinates. 
    Added a method MarbleWidget::setBoundingBox that applies the
    current View's BoundingBox to the bounding box object in 
    viewParams.
    * src/lib/MarbleWidget.{h,cpp} : added methods globalQuaternion