@@ -454,11 +454,32 @@ class MARBLE_EXPORT MarbleWidget : public QWidget
     void  rotateTo(const Quaternion& quat);
 
     /**
+     * @brief  Get the Projection used for the map
+     * @return @c Spherical         a Globe
+     * @return @c Equirectangular   a flat map
+     * @return @c Mercator          another flat map
+     */
+    Projection  projection() const;
+    /**
+     * @brief  Set the Projection used for the map
+     * @param  projection projection type (e.g. Spherical, Equirectangular, Mercator)
+     */
+    void  setProjection( const Projection projection );
+
+    /**
+     * @brief  get the home point
+     * @param  lon  the longitude of the home point.
+     * @param  lat  the latitude of the home point.
+     * @param  zoom the default zoom level of the home point.
+     */
+    void  home(double &lon, double &lat, int& zoom);
+    /**
      * @brief  Set the home point
      * @param  lon  the longitude of the new home point.
      * @param  lat  the latitude of the new home point.
+     * @param  zoom the default zoom level for the new home point.
      */
-    void  setHome(const double &lon, const double &lat, int zoom = 1050);
+    void  setHome(const double lon, const double lat, const int zoom = 1050);
     /**
      * @brief  Set the home point
      * @param  homePoint  The new home point.
